[package]
name = "bilibili"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "b站视频解析下载"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
indicatif = "0.18"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
zip = "2.4"
